added get_all_boarded_users method and report
